--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       - name: installing surge
         run: npm install --global surge
       - name: deploying surge
-        run: surge ./ drunk-bells.surge.sh --token $ {{secrets.TOKEN}}
+        run: surge ./ drunk-bells.surge.sh --token "a4a440a2ef7404d0eb6c635c6447dc61"
